# vibecheck-dashboard

./: .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  classification_rule.md
.github/workflows/: ci.yml  web-ci.yml
src/: App.svelte  CompanionApp.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs  permissions.rs  tray.rs
src-tauri/src/commands/: export_commands.rs  mod.rs  session_commands.rs  settings_commands.rs  spending_commands.rs  stats_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  queries.rs
src-tauri/src/monitor/: classifier.rs  detector.rs  mod.rs  session.rs
src/components/: ActivityBreakdown.svelte  ActivityFeed.svelte  AnalyticsTab.svelte  BreakOverlay.svelte  CurrentSession.svelte  Heatmap.svelte  PandaCompanion.svelte  PermissionPrompt.svelte  RecentSessions.svelte  ResearchInsights.svelte  ResearchReport.svelte  SessionComparison.svelte  SessionJournal.svelte  Settings.svelte  Sidebar.svelte  SpendingChart.svelte  SpendingTab.svelte  StatusIndicator.svelte  TabBar.svelte  TodaySummary.svelte  TrendChart.svelte  WrappedTab.svelte
src/lib/: api.ts  constants.ts  events.ts  stores.ts  types.ts  utils.ts
web/: README.md  package-lock.json  package.json  vercel.json
(+43 files in other folders)
