[package]
name = "vibecheck"
version = "0.1.0"
description = "Developer wellness dashboard for the age of AI-assisted coding"
authors = ["Manav Arya Singh"]
license = "MIT"
repository = "https://github.com/Manavarya09/vibecheck-dashboard"
keywords = ["developer-wellness", "ai-coding", "desktop", "tauri"]
categories = ["gui"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vibecheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri-plugin-log = "2"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
active-win-pos-rs = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tauri-plugin-autostart = "2"
